# codametrix

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/: data_load.py
src/app/: data_analyzer.py  data_cleanup.py  data_load.py  main.py
tests/: mlen_test.py
